removed background-fixed

--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -293,6 +293,7 @@ body {
 
 .fixed-background {
   height: 400px;
+  // width: auto;
   background: url(../../img/students-side-by-side.jpg);
   background-position: center;
   background-size: cover;
