--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap&subset=cyrillic-ext");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:200,300,400&display=swap&subset=cyrillic-ext");
 .glide {
   position: relative;
   width: 100%;
@@ -106,13 +106,13 @@
     background: white; }
 
 ::selection {
-  background: rgba(0, 20, 54, 0.3); }
+  background: rgba(34, 34, 34, 0.3); }
 
 html,
 body {
   scroll-behavior: smooth;
   font-family: "Open Sans", serif;
-  background: #fad4e1; }
+  background: #ccc; }
   @media (max-width: 500px) {
     html,
     body {
@@ -122,7 +122,7 @@ body {
   width: 100%;
   height: 2rem;
   padding: 0.5rem 1rem;
-  background: #333;
+  background: #222;
   font-weight: 300;
   color: whitesmoke; }
 
@@ -132,111 +132,15 @@ body {
   vertical-align: top;
   margin-right: 0.6rem; }
 
-/* 
 .cover {
-  // height: 34rem;
-  background: $red;
-  padding: 9rem 7%;
-  padding-top: 6rem;
-  box-shadow: 0 0.2rem 0.2rem 0.2rem rgba($gray, $alpha: 0.2);
-}
-.cover__flexbox {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-}
-.cover__text {
-  width: 36%;
-  line-height: 1.2;
-}
-.cover__heading {
-  font-size: 3rem;
-  font-weight: 400;
-  margin-bottom: 1rem;
-}
-.cover__oscars {
-  display: flex;
-  width: 50%;
-}
-.oscars__item {
-  align-self: flex-end;
-  margin: 0.3rem;
-  &--outline {
-  width: 4rem;
-  margin-left: auto;
-  }
-
-  &--full {
-  width: 15rem;
-  // filter: invert(5%) sepia(55%) saturate(5479%) hue-rotate(214deg) brightness(87%) contrast(101%);
-  margin-right: auto;
-  }
-}
-
-.cover__btn {
-  color: whitesmoke;
-  display: inline-block;
-  align-self: flex-start;
-  text-align: center;
-  line-height: 1.5;
-  border-radius: 0.25rem;
-  background: $gray;
-  border: 2px solid $gray;
-  font-family: inherit;
-  min-width: 100px;
-  text-transform: uppercase;
-  font-size: 12px;
-  letter-spacing: 2px;
-  padding: 10px 14px;
-  transition: all 0.3s ease;
-  margin-top: 2rem;
-  cursor: pointer;
-  text-decoration: none;
-  &:hover,
-  &:active {
-  background: $yellow;
-  border-color: $yellow;
-  color: $gray;
-  transform: translateY(-2px);
-  transition: all 0.3s ease;
-  cursor: pointer;
-  }
-}
-@media (max-width: 300px) {
-  .cover {
-  padding-top: 3rem;
-  padding-bottom: 5rem;
-  }
-  .cover__flexbox {
-  flex-direction: column;
-  align-items: center;
-  // text-align: center;
-  }
-  .cover__text {
-  width: initial;
-  }
-  .cover__oscars {
-  margin-top: 3rem;
-  align-self: start;
-  }
-  .oscars__item--full {
-  width: 4rem
-  }
-  .oscars__item--outline {
-  width: 3rem;
-  }
-} */
-.cover {
-  background: #5188a3; }
+  background: #222; }
 
 .cover__text {
   margin: 0 auto;
   width: 25rem;
   max-width: 90%;
   line-height: 1.2;
-  background: #5c374c;
+  background: #444;
   padding: 3%;
   color: white;
   padding-bottom: 12rem; }
@@ -244,28 +148,30 @@ body {
 .cover__background {
   height: 20rem;
   width: 100%;
-  background: #333; }
+  background: #222; }
 
 .cover__heading {
   font-size: 2.5rem;
-  font-weight: 400;
   margin-bottom: 1rem; }
 
 .cover__img {
   user-select: none;
-  margin-top: 1.5rem;
-  width: 50%; }
+  margin-top: 0;
+  width: 100%; }
+
+.cover__img--mobile {
+  display: none; }
 
 @media (max-width: 700px) {
-  .cover__img {
-    width: 100%; }
-    .cover__img:first-of-type {
-      display: none; }
+  .cover__img--desktop {
+    display: none; }
+  .cover__img--mobile {
+    display: initial; }
   .cover__background {
     height: 17rem; } }
 
 .s-section {
-  color: #001436; }
+  color: #222; }
 
 .s-section__inner {
   width: 70%;
@@ -285,80 +191,61 @@ body {
   margin-bottom: 2rem; }
 
 .s-section--purpose {
+  overflow: hidden;
   margin-top: -1px;
-  padding-top: 6rem;
-  background: #222;
-  color: whitesmoke; }
+  background: #000;
+  background-repeat: no-repeat;
+  background-size: 100vw;
+  background-position: top right;
+  padding-bottom: 10rem;
+  box-shadow: 0.1rem 0.1rem 0.2rem 0.2rem rgba(34, 34, 34, 0.6); }
+  .s-section--purpose__inner, .s-section--purpose__slider {
+    position: relative; }
+
+.s-section--purpose__img {
+  object-fit: cover;
+  margin-top: 5rem;
+  margin-bottom: -58vw;
+  transform-origin: top right; }
 
 .s-section--teaching {
   padding: 7rem 0;
   z-index: 1;
   position: relative; }
 
+.s-section--purpose__inner {
+  top: 8vw; }
+
 .s-section--purpose__heading {
-  margin-bottom: 3rem; }
+  margin-bottom: 3rem;
+  font-weight: 400; }
+
+.s-section--purpose__text {
+  margin-top: -5rem; }
 
 .s-section--teaching__img {
   user-select: none;
   display: block;
-  margin: 4rem auto;
-  max-width: 80%; }
+  margin: 4rem auto 0;
+  width: 100%; }
 
-.s-glide {
+/* .s-glide {
+  // margin-top: -40rem;
+  height: 0;
   padding: 13rem 0;
   padding-top: 7rem;
-  background: #222; }
+  background: #000;
+  // box-shadow: 0.1rem 0.1rem 0.2rem 0.2rem rgba($gray, $alpha: 0.6);
 
-.glide {
-  width: 70%;
-  margin: auto;
-  border-radius: 4px;
-  box-shadow: 0.1rem 0.1rem 0.2rem 0.2rem rgba(0, 20, 54, 0.6); }
-
-.glide__slide, .glide__slide img {
-  height: 43vw;
-  width: 70vw; }
-
-@media (max-width: 700px) {
-  .glide {
-    width: 90%; }
-  .glide__slide, .glide__slide img {
-    width: 90vw;
-    height: 60vw; }
-  .glide__bullets {
-    display: none; } }
-
-.glide__slide img {
-  object-fit: cover; }
-
-.s-section__desc, .s-section__list {
-  font-weight: 300;
-  font-size: 1.2rem;
-  line-height: 1.3; }
-
-.s-section__list-item {
-  font-weight: 300; }
-
-.fixed-background {
-  height: 400px;
-  background: url(../../img/students-side-by-side.jpg);
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed; }
-
-.fixed-background__inner {
-  background: rgba(0, 0, 0, 0.5);
-  width: 100%;
-  height: 100%; }
-
+} */
 .contact-box {
-  margin: 2rem auto;
+  margin: 12rem auto 2rem;
   padding: 2rem;
   height: 8em;
   width: fit-content;
   max-width: 95vw;
-  background: #134b88;
-  box-shadow: 0.1rem 0.1rem 0.2rem 0.2rem rgba(0, 20, 54, 0.6);
+  background: #000;
+  box-shadow: 0.1rem 0.1rem 0.2rem 0.2rem rgba(34, 34, 34, 0.6);
   color: whitesmoke;
   font-size: 1.2rem;
   font-weight: 400;
@@ -487,23 +374,119 @@ svg {
   90% {
     transform: rotate(3deg); } }
 
+.slider__inner {
+  margin-top: 18rem;
+  display: flex;
+  width: 100%;
+  justify-content: space-around; }
+
+.slider__text {
+  color: #eee;
+  text-align: right;
+  width: 40%;
+  align-self: flex-end; }
+
+.glide {
+  width: 40%;
+  border-radius: 4px; }
+
+.glide__slide, .glide__slide img {
+  height: 31vw;
+  width: 100%; }
+
+@media (max-width: 700px) {
+  .glide {
+    width: 90%; }
+  .glide__slide, .glide__slide img {
+    width: 90vw;
+    height: 60vw; }
+  .glide__bullets {
+    display: none; } }
+
+.glide__slide img {
+  object-fit: cover;
+  display: block; }
+
+.s-section__desc, .s-section__list {
+  font-weight: 300;
+  font-size: 1.2rem;
+  line-height: 1.3; }
+
+.s-section__list-item {
+  font-weight: 300; }
+
+.s-section--purpose__slider {
+  display: flex; }
+
+@media (max-width: 900px) {
+  .s-section--purpose__inner {
+    top: -5vw; } }
+
+@media (max-width: 900px) and (min-width: 500px) {
+  .s-section--purpose__inner {
+    transform: translate(-10%); } }
+
+@media (max-width: 700px) {
+  .s-section--purpose__heading {
+    font-size: 25px; }
+  .s-section--purpose__list {
+    font-size: 14px; }
+  .s-section--purpose__inner {
+    top: -3vw; }
+  .slider__inner {
+    flex-direction: column;
+    align-items: center;
+    width: 90%; }
+  .glide {
+    width: 100%; }
+  .s-section--purpose__slider {
+    flex-direction: column;
+    align-items: center; }
+  .slider__text {
+    margin: -5rem 0 5rem; } }
+
+@media (max-width: 500px) {
+  .s-section--purpose {
+    color: #eee; }
+  .s-section--purpose__img {
+    display: none; }
+  .s-section--purpose__inner {
+    position: static; }
+  .s-section--purpose * {
+    margin: 0;
+    transform: none; }
+  .slider__text {
+    width: 100%;
+    text-align: left;
+    margin-bottom: 2rem;
+    line-height: 1.3; }
+  .s-section__inner, .s-section__slider {
+    margin: 5rem auto 0; }
+  .s-section--purpose__heading {
+    margin-bottom: 3rem; } }
+
 .contact-box__new-appl {
   text-decoration: underline;
   cursor: pointer; }
 
 .s-cards__heading {
-  margin-bottom: 5rem;
   font-weight: 400;
-  align-self: flex-start; }
+  align-self: flex-start;
+  color: #eee;
+  margin-bottom: 2rem; }
+
+.s-cards__desc {
+  color: #ddd;
+  align-self: start; }
 
 .s-cards {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: #5c374c;
+  background: #444;
   padding: 4rem 0;
-  padding-bottom: 12rem;
-  color: whitesmoke; }
+  color: #222; }
 
 .s-cards__inner {
   display: flex;
@@ -521,6 +504,7 @@ svg {
       font-size: 65%; } }
 
 .cards {
+  margin-top: 3.7rem;
   display: flex;
   justify-content: space-between;
   width: 100%; }
@@ -531,12 +515,12 @@ svg {
 
 */
 .card {
-  background: #134b88;
+  background: #eee;
   padding: 1.5em;
   width: 13em;
   height: 15em;
   border-radius: 10px;
-  box-shadow: 0.1rem 0.1rem 0.3rem 0.3rem rgba(0, 20, 54, 0.2);
+  box-shadow: 0.1rem 0.1rem 0.3rem 0.3rem rgba(34, 34, 34, 0.2);
   margin: 1rem 0; }
 
 .card__heading {
