fixed input max-width

--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -225,7 +225,7 @@ body {
   justify-content: center;
 }
 .contact-box__input {
-  max-width: 85vw;
+  max-width: 85%;
   font-family: inherit;
   color: #333;
   font-size: 90%;
