--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -202,6 +202,10 @@ body {
   height: 2rem;
   // line-height: 1.5;
   margin-right: -0.3rem;
+  background: #eee;
+  &[disabled] {
+    background: #ddd;
+  }
 }
 
 $size: 2rem;
