--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -192,7 +192,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
 }
 .contact-box__input {
   max-width: 80%;
