--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -197,7 +197,7 @@ body {
   height: 2rem;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
+  // overflow: hidden;
   // -webkit-box-orient: horizontal;
 }
 
