--- a/styles/css/reset.css
+++ b/styles/css/reset.css
@@ -5,6 +5,7 @@
 
 * {
     box-sizing: border-box;
+    border-radius: 0;
 }
 
 input, textarea, button, select, a {
@@ -216,6 +217,8 @@ button, input, select, textarea {
     /* 3 */
     *vertical-align: middle;
     /* 3 */
+    outline: none;
+    border: none;
 }
 
 /**
