--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -66,7 +66,7 @@ body {
 
 .cover {
   // background: $darkgrey;
-  background-image: url(/img/curtain.jpg), linear-gradient(#111, #111);
+  background-image: url("/img/curtain.jpg"), linear-gradient(#111, #111);
   background-size: cover;
   background-blend-mode: multiply;
   height: 500px;
