--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -163,7 +163,8 @@ body {
 }
 .cover__img {
   // margin-top: 0;
-  width: 100%;
+  width: 100% !important;
+  z-index: 11111111111111111111111111;
   position: absolute;
   bottom: 0;
 }
