--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -166,6 +166,7 @@ body {
   width: 100% !important;
   z-index: 11111111111111111111111111;
   position: absolute;
+  left: 0;
   bottom: 0;
 }
 .cover__img--mobile {
