--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -102,7 +102,7 @@ body {
   padding-bottom: 12rem;
   box-shadow: inset 10px 5px 15px 5px black;
   // box-shadow: shadow3d(0.25, 25, #111);
-  transform: rotateY(-10deg);
+  // transform: rotateY(-10deg);
 }
 
 .cover__heading {
